--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,4 +1,12 @@
-/node_modules
-.env
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 yarn-debug.log*
 yarn-error.log*
+
+.env
