--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,16 @@
-/node_modules
-/build
-.DS_Store
-.env.local
-.env.production
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 yarn-debug.log*
 yarn-error.log*
+
+/build
+.DS_Store
+
+.env.local
+.env.production
